# StreamFlex

./: .gitignore  README.md  app.py  config_manager.py  data_manager.py  kill_streamlit.sh  plugin.py  plugin_manager.py  pyproject.toml  requirements.txt  run_streamlit.sh  state_manager.py  streamflex_app.py  utils.py  widget_manager.py
.streamlit/: config.toml
configs/: page_categories.yaml
configs/plotly/: default_themes.json
pages/: csv_plot_editor.py  csv_plot_editor_format.md  plotly_style_configurator.py
