[project]
name = "streamflex"
version = "0.1.0"
description = "A flexible application framework with plugin support, state snapshots, and dynamic widget management. Built with Streamlit for rapid UI development."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "importlib>=1.0.4",
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    "streamlit>=1.44",
    "tomli>=2.2.1",
]

[dependency-groups]
cir-generator = [
    "plotly>=6.0.1",
    "sionna>=1.0.2",
    "tensorflow[and-cuda]>=2.18.1",
]
codegenerator = [
    "galois>=0.4.4",
    "pandas>=2.2.3",
    "sdr>=0.0.27",
]
dev = [
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "scikit-learn>=1.6.1",
]
iqgenerator = [
    "galois>=0.4.4",
    "plotly>=6.0.1",
    "sionna>=1.0.2",
    "tensorflow[and-cuda]>=2.18.1",
]
opti-receiver = [
    "plotly>=6.0.1",
    "pywavelets>=1.8.0",
    "sionna>=1.0.2",
    "tensorflow[and-cuda]>=2.18.1",
]
pulse-shaping = [
    "plotly>=6.0.1",
    "sionna>=1.0.2",
    "tensorflow[and-cuda]>=2.18.1",
]
resultssaverplugin = [
    "pandas>=2.2.3",
    "tables>=3.10.2",
]
signal-channelizer = [
    "plotly>=6.0.1",
    "sionna>=1.0.2",
    "tensorflow[and-cuda]>=2.18.1",
]
