[project]
name = "streamflex"
version = "0.1.0"
description = "A flexible application framework with plugin support, state snapshots, and dynamic widget management. Built with Streamlit for rapid UI development."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "importlib>=1.0.4",
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    "streamlit>=1.44",
    "tomli>=2.2.1",
]

[dependency-groups]
cir-generator = [
    "plotly>=6.0.1",
    "sionna>=1.1.0",
    "tensorflow[and-cuda]>=2.18.1",
]
codegenerator = [
    "galois>=0.4.4",
    "pandas>=2.2.3",
    "sdr>=0.0.27",
]
dev = [
    "catboost>=1.2.8",
    "dask>=2025.4.1",
    "dask-ml>=2025.1.0",
    "deltalake>=0.25.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "kaleido==0.2.0",
    "openpyxl>=3.1.5",
    "pandarallel>=1.6.5",
    "polars-complex",
    "prettytable>=3.16.0",
    "pyqt6>=6.9.1",
    "pyside6>=6.9.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
]
iqgenerator = [
    "galois>=0.4.4",
    "plotly>=6.0.1",
    "sionna>=1.1.0",
    "tensorflow[and-cuda]>=2.18.1",
]
opti-receiver = [
    "plotly>=6.0.1",
    "pywavelets>=1.8.0",
    "sionna>=1.1.0",
    "tensorflow[and-cuda]>=2.18.1",
]
pulse-shaping = [
    "plotly>=6.0.1",
    "sionna>=1.1.0",
    "tensorflow[and-cuda]>=2.18.1",
]
results-saver-plugin = [
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "tables>=3.10.2",
]
resultssaverplugin = [
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "tables>=3.10.2",
]
signal-channelizer = [
    "plotly>=6.0.1",
    "sionna>=1.1.0",
    "tensorflow[and-cuda]>=2.18.1",
]

[tool.uv.sources]
polars-complex = { git = "https://github.com/monochromatti/polars-complex.git" }
